--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,7 @@
         "demo.android": "npm run tsc && cd ../demo && tns run android --emulator",
         "demo.reset": "cd ../demo && npx rimraf -- hooks node_modules platforms package-lock.json",
         "demo-angular.ios": "npm run tsc && cd ../demo-angular && tns run ios --emulator",
-        "demo-angular.android": "npm run tsc && cd ../demo-angular && tns run android",
+        "demo-angular.android": "npm run tsc && cd ../demo-angular && tns run android --emulator",
         "demo-angular.reset": "cd ../demo-angular && npx rimraf -- hooks node_modules platforms package-lock.json",
         "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-mercadopago-px && tns plugin add ../src && cd ../demo-angular && tns plugin remove nativescript-mercadopago-px && tns plugin add ../src",
         "clean": "npm run demo.reset && npm run demo-angular.reset && npx rimraf -- node_modules package-lock.json && npm i"
