agregando callback al terminar el proceso de meradopago

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -20,8 +20,6 @@
         "noImplicitUseStrict": false,
         "noFallthroughCasesInSwitch": true
     },
-    "exclude": [
-        "node_modules"
-    ],
+    "exclude": ["node_modules"],
     "compileOnSave": false
 }
