--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nativescript-mercadopago-px",
-    "version": "2.0.0",
+    "version": "2.5.5",
     "description": "Your awesome NativeScript plugin.",
     "main": "mercadopago-px",
     "typings": "index.d.ts",
@@ -10,7 +10,7 @@
             "ios": "5.4.0"
         }
     },
-    "repository": {
+    "repoactivitysitory": {
         "type": "git",
         "url": "https://github.com/NeriCodec/nativescript-mercadopago-px.git"
     },
